@@ -33,6 +33,9 @@ class NumericData < ActiveRecord::Base ; self.table_name = 'numeric_data' ; end
 class CustomersView < ActiveRecord::Base ; self.table_name = 'customers_view' ; end
 class StringDefaultsView < ActiveRecord::Base ; self.table_name = 'string_defaults_view' ; end
 class StringDefaultsBigView < ActiveRecord::Base ; self.table_name = 'string_defaults_big_view' ; end
+class SqlServerQuotedTable < ActiveRecord::Base ; self.table_name = 'quoted-table' ; end
+class SqlServerQuotedView1 < ActiveRecord::Base ; self.table_name = 'quoted-view1' ; end
+class SqlServerQuotedView2 < ActiveRecord::Base ; self.table_name = 'quoted-view2' ; end
 class SqlServerUnicode < ActiveRecord::Base ; end
 class SqlServerString < ActiveRecord::Base ; end
 class SqlServerChronic < ActiveRecord::Base
